--- a/content/modules/ROOT/pages/step-03.adoc
+++ b/content/modules/ROOT/pages/step-03.adoc
@@ -41,7 +41,7 @@ all:
         node2.{{ shortname }}.example.com:
   vars:
 # Global variables
-    admin_password: "Redhat123!" # Administrator password used for all applications, recommened using Ansible vault in prod.
+    admin_password: "{ssh_password}" # Administrator password used for all applications, recommened using Ansible vault in prod.
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
