--- a/content/modules/ROOT/pages/step-05.adoc
+++ b/content/modules/ROOT/pages/step-05.adoc
@@ -46,7 +46,7 @@ all:
         node2.{{ shortname }}.example.com:
   vars:
 # Global variables
-    admin_password:  "Redhat123!" # Administrator password used for all applications
+    admin_password:  "{ssh_password}" # Administrator password used for all applications
     ad_admin_password: "{ssh_password}"
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
