--- a/content/modules/ROOT/pages/step-04.adoc
+++ b/content/modules/ROOT/pages/step-04.adoc
@@ -11,7 +11,7 @@
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_user: Administrator
-          ansible_password: "{{ ad_admin_password }}"
+          ansible_password: "{{ admin_password }}"
 ----
 === Additional variables
 [source,init,role=execute,subs=attributes+]
@@ -34,7 +34,6 @@ winsrv_ip: "{windows_ip}"
       - { ad_name: aduser2, ad_first: AD, ad_last: User2 }
       - { ad_name: aduser3, ad_first: AD, ad_last: User3 }
     ad_admin: "Administrator" # AD administrator name
-    ad_admin_password: "{{ admin_password }}" # AD administrator password
 ----
 === Current
 [source,init,role=execute,subs=attributes+]
@@ -47,7 +46,7 @@ all:
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_user: Administrator
-          ansible_password: "{{ ad_admin_password }}"
+          ansible_password: "{{ admin_password }}"
     ipaserver:      
       hosts: 
         idmsrv.{{ shortname }}.example.com:
@@ -57,7 +56,6 @@ all:
   vars:
 # Global variables
     admin_password: "{ssh_password}" # Administrator password used for all applications
-    ad_admin_password: "{ssh_password}"
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
@@ -137,7 +135,6 @@ all:
       - { ad_name: aduser2, ad_first: AD, ad_last: User2 }
       - { ad_name: aduser3, ad_first: AD, ad_last: User3 }
     ad_admin: "Administrator" # AD administrator name
-    ad_admin_password: "{{ ad_admin_password }}" # AD administrator password
 ----
 
 [#playbook]
