--- a/content/modules/ROOT/pages/step-05.adoc
+++ b/content/modules/ROOT/pages/step-05.adoc
@@ -34,7 +34,7 @@ all:
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_user: Administrator
-          ansible_password: "{{ ad_admin_password }}"
+          ansible_password: "{{ admin_password }}"
     ipaserver:      
       hosts: 
         idmsrv.{{ shortname }}.example.com:
@@ -47,7 +47,6 @@ all:
   vars:
 # Global variables
     admin_password:  "{ssh_password}" # Administrator password used for all applications
-    ad_admin_password: "{ssh_password}"
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
@@ -130,7 +129,6 @@ all:
       - { ad_name: aduser2, ad_first: AD, ad_last: User2 }
       - { ad_name: aduser3, ad_first: AD, ad_last: User3 }
     ad_admin: "Administrator" # AD administrator name
-    ad_admin_password: "{{ ad_admin_password }}" # AD administrator password
 
 ----
 
