--- a/content/modules/ROOT/pages/step-01.adoc
+++ b/content/modules/ROOT/pages/step-01.adoc
@@ -33,7 +33,7 @@ all:
     ipaserver_setup_adtrust: true
     ipaserver_reverse_zones: "{{ third }}.168.192.in-addr.arpa"
     ipaserver_allow_zone_overlap: true
-    ipaserver_no_forwarders: true
+    ipaserver_forwarders: 192.168.0.2
     ipaserver_forward_policy: first
     ipaserver_no_dnssec_validation: true
     ipaserver_netbios_name: "{{ shortname | upper }}"
@@ -69,3 +69,5 @@ First, open a terminal window and run `{socks_ssh_command}` using the password `
 Next, open the `Firefox` browser, and click the 3 horizontal lines on the search bar line, click on `Settings`, type proxy in the `Find in Settings` search bar.
 
 Once the `Network Settings` shows up, click `Settings` and select `Manual proxy configuration`. Add set the `SOCKS Host` to localhost and `Port` to 5060. Finally check the checkbox for `Proxy DNS when using SOCKS v5`.
+
+Lastly, enter in `idmsrv.idm.example.com` in the search bar.
