--- a/content/modules/ROOT/pages/step-05.adoc
+++ b/content/modules/ROOT/pages/step-05.adoc
@@ -68,6 +68,7 @@ all:
     ipaserver_netbios_name: "{{ shortname | upper }}"
     ipaserver_firewalld_zone: public
     ipareplica_forwarders: "192.168.0.2"
+    ipareplica_forward_policy: first
     ipareplica_setup_adtrust: true
     ipareplica_no_dnssec_validation: true
     ipareplica_setup_ca: true
@@ -111,7 +112,6 @@ all:
       ip:
         dns: 
           - "{{ idm_dns[0].idm_ip }}"
-          - 192.168.0.2
         address: "{{ ansible_default_ipv4.address }}/24"
         gateway4: "{{ ansible_default_ipv4.gateway }}"
 ### Windows DNS
