--- a/content/modules/ROOT/pages/step-06.adoc
+++ b/content/modules/ROOT/pages/step-06.adoc
@@ -43,11 +43,13 @@ all:
     ipaserver_setup_adtrust: true
     ipaserver_reverse_zones: "{{ third }}.168.192.in-addr.arpa"
     ipaserver_allow_zone_overlap: true
-    ipaserver_no_forwarders: true
+    ipaserver_forwarders: "192.168.0.2"
+    ipaserver_forward_policy: first
     ipaserver_no_dnssec_validation: true
     ipaserver_netbios_name: "{{ shortname | upper }}"
     ipaserver_firewalld_zone: public
-    ipareplica_no_forwarders: true
+    ipareplica_forwarders: "192.168.0.2"
+    ipareplica_forward_policy: first
     ipareplica_setup_adtrust: true
     ipareplica_no_dnssec_validation: true
     ipareplica_setup_ca: true
@@ -94,7 +96,6 @@ all:
       ip:
         dns: 
           - "{{ idm_dns[0].idm_ip }}"
-          - 192.168.0.2
         address: "{{ ansible_default_ipv4.address }}/24"
         gateway4: "{{ ansible_default_ipv4.gateway }}"
 ### Windows DNS
